# auspost

./: .coverage  .dependabotbot.json  .drone.yml  .drone.yml.disabled  .gitignore  Pipfile  README.md  README.rst  SECURITY.MD  SECURITY.md  __init__.py  auspost.py  build_script.sh  pyproject.toml  requirements.txt  run-test-suite.sh  setup.py  sonar-project.properties  test.py  test_auspost.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: github_deploy.yml  mypy.yml  publish.yml  pylint.yml  pytest.yml  testing.yml
auspost/: __init__.py
tests/: test_auspost.py  test_connectionerror.py
