[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "James Hodgkinson", email = "james@terminaloutcomes.com"},
]
name = "auspost"
version = "0.1.0"
description = "A quick module for searching and pulling suburb data from the Australia Post website."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8,<4.0"
keywords = [
    "australia post",
    "suburb",
    "postcode",
]
dependencies = [
    "MechanicalSoup<2.0.0,>=1.1.0",
    "lxml<7.0,>=4.8",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.0.0,<9.0.0",
    "requests-mock<2.0.0,>=1.10.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "types-requests<3.0.0,>=2.28.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 200
