
[project]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
name = "auspost"
version = "0.2.0"
description = "A quick module for searching and pulling suburb data from the Australia Post website."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
keywords = ["australia post", "suburb", "postcode"]
dependencies = [
    "MechanicalSoup>=1.1.0", # toml-reflow avoidance
    "lxml>=4.8",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "requests-mock>=1.10.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "types-requests>=2.32.4.20260107",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 200

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
